--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -13,4 +13,7 @@
 
 @import "components/checkbox";
 @import "components/footer";
-@import "components/navbar"
+@import "components/navbar";
+
+// Mapbox
+@import url("https://api.mapbox.com/mapbox-gl-js/v3.1.2/mapbox-gl.css");
