--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>TokyoScene</title>
+    <title>TokyoScene: Find your next favourite band in Tokyo.</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
@@ -10,9 +10,21 @@
     <%= javascript_importmap_tags %>
   </head>
 
-  <body><%= render "shared/navbar" %>
-<%= render "shared/flashes" %>
+  <body>
+    <!-- LEWAGON'S DEFAULT FOOTER -->
+    <%# <%= render "shared/navbar" %> 
 
-    <%= yield %>
+    <!-- CUSTOM FOOTER FOR TOKYOSCENE-->
+    <%= render "layouts/navbar" %>
+
+
+    <%= render "shared/flashes" %>
+
+    <div class="content">
+      <%= yield %>
+    </div>
+
+    <%= render "layouts/footer" %>
+
   </body>
 </html>
