--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -13,6 +13,7 @@
   text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
   border-radius: 5px;
   box-shadow: 0 0 15px rgba(0,0,0,0.2);
+}
 
 .card-product {
     overflow: hidden;
@@ -23,21 +24,21 @@
     background: white;
     box-shadow: 0 0 15px rgba(0,0,0,0.2);
     display: flex;
-    align-items: center; 
+    align-items: center;
   }
-  
+
   .card-product img {
     height: 100%;
     width: 120px;
     object-fit: cover;
   }
-  
+
   .card-product h2 {
     font-size: 16px;
     font-weight: bold;
     margin: 0;
   }
-  
+
   .card-product p {
     font-size: 12px;
     line-height: 1.4;
@@ -45,11 +46,11 @@
     margin-bottom: 8px;
     margin-top: 8px;
   }
-  
+
   .card-product .card-product-infos {
     padding: 16px;
   }
-  
+
   .card-registration-button,
 .card-details-button {
     display: inline-block;
