map added to /gigs

--- a/app/views/gigs/index.html.erb
+++ b/app/views/gigs/index.html.erb
@@ -1,41 +1,16 @@
 <h1> All Gigs </h1>
-
 <% @gigs.each do |gig| %>
-<%= gig.name %>
+  <%= gig.name %>
 <% end %>
-
-<div style="width: 100%; height: 600px;"
-  data-controller="map"
-  data-map-markers-value="<%= @markers.to_json %>"
-  data-map-api-key-value="<%= ENV['MAPBOX_API_KEY'] %>"></div>
-
-
-
-<% @gigs.each do |gig| %>
-<div class="card-product row">
-    <img src="https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/skateboard.jpg" class="col-2"/>
-<div class="card-product-infos col-5">
-  <div>
-    <strong>Name:</strong> <%= gig.name %>
+<%# PSEUDOCODE %>
+<%# 1. Clicking on a marker updates the info on the bottom of th emap %>
+<%# MAPBOX %>
+<div data-controller="map" class="map-container" data-map-markers-value="<%= @markers.to_json %>" data-map-api-key-value="<%= ENV['MAPBOX_API_KEY'] %>">
+  <div class="mapbox" style="width: 100%; height: 600px;"
+  data-map-target="mapElement"
+  >
   </div>
-  <div>
-    <strong>Description:</strong> <%= gig.description %>
+  <div class="content-wrapper" data-map-target="gig">
   </div>
-  <div>
-    <strong>Date:</strong> <%= gig.time %>
-  </div>
-  <div>
-    <strong>Location:</strong> <%= gig.location %>
-  </div>
-  </div>
-  
- <div class="col-3">
-    <a href="registration-page.html" class="card-registration-button">Register</a>
-    <a href="details-page.html" class="card-details-button">Info</a>
+  <%= link_to "Back to Search", root_path, class: "btn btn-flat"%>
 </div>
-
-</div>
-<% end %>
-
-
-<%= link_to "Back to Search", root_path, class: "btn btn-flat"%>
