--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -1,3 +1,5 @@
+// All CSS for footer goes here
+
 .page-container {
     display: flex;
     flex-direction: column;
@@ -19,7 +21,8 @@
     box-shadow: 0 -2px 5px rgba(0, 0, 0, 0.1);
     position: absolute;
     bottom: 0;
-  }
+    z-index: 5; /* Lower than gigs-partial */
+}
 
 .nav-item {
     flex: 1;
