--- a/app/assets/stylesheets/components/_map.scss
+++ b/app/assets/stylesheets/components/_map.scss
@@ -7,3 +7,15 @@
     text-align: center;
     font-family: "Open Sans", sans-serif;
 }
+
+.mapboxgl-canvas-container {
+    position: relative;
+    width: 100vw;  // Full width of the viewport
+    height: 90vh; // Full height of the viewport
+    overflow: hidden; // Prevent scrolling
+  }
+  
+  .mapbox {
+    width: 100%;
+    height: 100%;
+  }
