--- a/app/views/gigs/_gigs.html.erb
+++ b/app/views/gigs/_gigs.html.erb
@@ -1,21 +1,22 @@
 <div class="card-product row">
   <img src="https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/skateboard.jpg" class="col-2"/>
   <div class="card-product-infos col-5">
-    <div>
-      <strong>Name:</strong> <%= gig.name %>
+    <div class="pb-2">
+      <%#  Turns the time into a Day, Date, Month, Year format %>
+      <%= gig.time.strftime("%A, %d %B %Y") %>
+    </div>
+    <div class="pb-2">
+      <h4><%= gig.name %></h4>
     </div>
     <div>
-      <strong>Description:</strong> <%= gig.description %>
-    </div>
-    <div>
-      <strong>Date:</strong> <%= gig.time %>
-    </div>
-    <div>
-      <strong>Location:</strong> <%= gig.location %>
+      <strong><i class="fa-solid fa-location-dot"></i></strong> <%= gig.location %>
     </div>
   </div>
   <div class="col-3">
-    <a href="registration-page.html" class="card-registration-button">Register</a>
-    <a href="details-page.html" class="card-details-button">Info</a>
+    <%#  %>
+    <%= link_to "<i class='fa-solid fa-ticket'></i>".html_safe, new_gig_registration_path(gig), class: 'btn btn-flat' %>
+    <div>
+      <%# TODO: Get the gigs/show page %>
+      <a href="details-page.html" class="btn btn-flat"><i class="fa-solid fa-circle-info"></i> </a></div>
   </div>
 </div>
