registration and dashboard buttons clickable

--- a/app/views/registrations/confirm.html.erb
+++ b/app/views/registrations/confirm.html.erb
@@ -23,4 +23,4 @@
 
 <%= link_to "Back to Search", root_path, class: "btn btn-flat" %>
 
-<%= link_to "See All My Registered Gigs (TODO check path, change to dashboard)", gigs_path, class: "btn btn-secondary" %> 
+<%= link_to "See All My Registered Gigs", dashboard_path, class: "btn btn-secondary" %> 
