--- a/app/views/gigs/show.html.erb
+++ b/app/views/gigs/show.html.erb
@@ -22,4 +22,6 @@
 
 
 
-<%= link_to 'Register', new_gig_registration_path(@gig), style: 'background-color: purple; color: white; padding: 10px 20px; text-align: center; text-decoration: none; display: inline-block; font-size: 16px; margin: 4px 2px; cursor: pointer; border: none; border-radius: 4px;' %>
+<%= simple_form_for [@gig, @registration] do |f| %>
+  <%= f.submit "Register", style: 'background-color: purple; color: white; padding: 10px 20px; text-align: center; text-decoration: none; display: inline-block; font-size: 16px; margin: 4px 2px; cursor: pointer; border: none; border-radius: 4px;' %>
+<% end %>
