--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -18,20 +18,21 @@
 @import url("https://api.mapbox.com/mapbox-gl-js/v3.1.2/mapbox-gl.css");
 
 .content-wrapper {
-    display: flex;
-    flex-direction: column;
-    min-height: 100vh;
-  }
-  
-  .gig-cards-container {
-    margin-top: auto;
-    padding: 20px;
-    background-color: #f8f9fa; /* Optional: Add a background color */
-  }
-  
-  footer {
-    background-color: #343a40;
-    color: white;
-    padding: 10px;
-    text-align: center;
-  }
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+}
+
+.gig-cards-container {
+  margin-top: auto;
+  padding: 20px;
+  background-color: #f8f9fa;
+  /* Optional: Add a background color */
+}
+
+footer {
+  background-color: #343a40;
+  color: white;
+  padding: 10px;
+  text-align: center;
+}
