Combined the index page to home page

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,7 +1,8 @@
 <div class="map-container">
-
   <%# PLACEHOLDER FOR SEARCHBAR - Erika you can add your html for your searchbar in _search.html.erb!! %>
   <%= render 'gigs/search' %>
+  <%# Added filter as a partial here %>
+  <%= render 'gigs/filter' %>
   <%# Added the map as a partial here %>
   <%= render 'gigs/map' %>
 </div>
