--- a/app/views/gigs/_filter.html.erb
+++ b/app/views/gigs/_filter.html.erb
@@ -1,14 +1,3 @@
-<!--Search bar -->
-<div class="row">
-  <div class="col-sm-12 my-3 pb-3">
-    <%= form_with url: gigs_path, method: :get, class: "d-flex" do %>
-      <%= text_field_tag :query, params[:query], class: "form-control", placeholder: "Type a keyword" %>
-      <%= button_tag(type: 'submit', class: 'btn btn-primary ml-2') do %>
-        <i class='fa-solid fa-magnifying-glass'></i>Search
-      <% end %>
-    <% end %>
-  </div>
-</div>
 <!--Dropdown-1 location-->
 <div class="dropdown">
   <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -54,22 +43,14 @@
     </ul>
   </div>
   <!--All gigs this part below can be rewrited-->
-  <% @gigs.each do |gig| %>
-    <h3> <%= gig.name %> </h3>
-    <li> <%= gig.description %> </li>
-    <li> <%= gig.location %> </li>
-  <% end %>
-  <h1> All Gigs </h1>
-  <% @gigs.each do |gig| %>
-    <%= gig.name %>
-  <% end %>
-  <%# MAPBOX %>
-  <div data-controller="map" class="map-container" data-map-markers-value="<%= @markers.to_json %>" data-map-api-key-value="<%= ENV['MAPBOX_API_KEY'] %>">
-    <div class="mapbox" style="width: 100%; height: 600px;"
-  data-map-target="mapElement"
-  >
-    </div>
-    <div class="content-wrapper" data-map-target="gig">
-    </div>
-    <%= link_to "Back to Search", root_path, class: "btn btn-flat" %>
+  <div class="no-display">
+    <% @gigs.each do |gig| %>
+      <h3> <%= gig.name %> </h3>
+      <li> <%= gig.description %> </li>
+      <li> <%= gig.location %> </li>
+    <% end %>
+    <h1> All Gigs </h1>
+    <% @gigs.each do |gig| %>
+      <%= gig.name %>
+    <% end %>
   </div>
