--- a/app/views/gigs/_search.html.erb
+++ b/app/views/gigs/_search.html.erb
@@ -1,4 +1,4 @@
-<div class="search-bar">
+<!--<div class="search-bar">
 
 <%= simple_form_for :search, url: root_path, method: :get do |f| %>
   <div class="search-form-control form-group">
@@ -8,4 +8,15 @@
     </button>
   </div>
 <% end %>
+</div>-->
+<!--Search bar -->
+<div class="row">
+  <div class="col-sm-12 my-3 pb-3">
+    <%= form_with url: gigs_path, method: :get, class: "d-flex" do %>
+      <%= text_field_tag :query, params[:query], class: "form-control", placeholder: "Type a keyword" %>
+      <%= button_tag(type: 'submit', class: 'btn btn-primary ml-2') do %>
+        <i class='fa-solid fa-magnifying-glass'></i>Search
+      <% end %>
+    <% end %>
+  </div>
 </div>
