--- a/app/views/users/dashboard.html.erb
+++ b/app/views/users/dashboard.html.erb
@@ -1,14 +1,20 @@
 <h3> Your Coming Events </h3>
+
+<div class="d-flex flex-column justify-content-center align-items-center">
 <% @current_user.registrations.each do |registration| %>
 
-  <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/breakfast.jpg)">
-    <%= registration.gig.name %>
-    <%= registration.gig.time %>
-    <%= registration.gig.location %>
-    <%= registration.status %>
+<div class="upcoming-events-card">
+  <img src="https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/skateboard.jpg" />
+  <div class="upcoming-events-card-infos">
+    <h2> <%= registration.gig.name %></h2>
+    <p><%= registration.gig.time %></p>
+    <p><%= registration.gig.location %></p>
+    <p><%= registration.status %></p>
   </div>
-
+</div>
 <% end %>
+</div>
+
 
 <h3> My Favorite Genres </h3>
 <% @current_user.genre_list.each do |genre| %>
