--- a/app/views/gigs/_filter.html.erb
+++ b/app/views/gigs/_filter.html.erb
@@ -9,7 +9,7 @@
     <% end %>
   </ul>
 </div>
-<!--Dropdown-2 recommended-->
+<!--Dropdown-2 recommended
 <div class="dropdown">
   <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
     recommended
@@ -19,7 +19,7 @@
       <li><a class="dropdown-item" href="#"><%= location %></a></li>
     <%end %>
   </ul>
-</div>
+</div>-->
 <!--Dropdown-3 genre-->
 <div class="dropdown">
   <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -31,7 +31,7 @@
       <%end %>
     </ul>
   </div>
-  <!--Dropdown-4  date-->
+  <!--Dropdown-4  date
   <div class="dropdown">
     <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
       Date
@@ -41,7 +41,7 @@
         <li><a class="dropdown-item" href="#"><%= location %></a></li>
       <%end %>
     </ul>
-  </div>
+  </div>-->
   <!--All gigs this part below can be rewrited-->
   <div class="no-display">
     <% @gigs.each do |gig| %>
