--- a/app/views/gigs/_gigs.html.erb
+++ b/app/views/gigs/_gigs.html.erb
@@ -1,6 +1,6 @@
-<div class="card-product row">
+<div class="upcoming-events-card">
   <img src="https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/skateboard.jpg" class="col-2"/>
-  <div class="card-product-infos col-5">
+  <div class="cupcoming-events-card-infos col-5">
     <div class="pb-2">
       <%#  Turns the time into a Day, Date, Month, Year format %>
       <%= gig.time.strftime("%A, %d %B %Y") %>
