changed button that said test to say register

--- a/app/views/gigs/_card.html.erb
+++ b/app/views/gigs/_card.html.erb
@@ -23,7 +23,7 @@
     <%= gig.time %>
     </p>
 
-<%= link_to "test", confirm_gig_registrations_path(gig), class: "btn btn-secondary" %> 
+<%= link_to "Register", confirm_gig_registrations_path(gig), class: "btn btn-secondary" %> 
 
   </div>
 
