changed filter styling

--- a/app/views/gigs/_filter.html.erb
+++ b/app/views/gigs/_filter.html.erb
@@ -1,6 +1,6 @@
 <!--Dropdown-1 location-->
-<div class="dropdown">
-  <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+<div class="dropdown custom-dropdown">
+  <button class="btn btn-secondary dropdown-toggle custom-dropdown-button" type="button" data-bs-toggle="dropdown" aria-expanded="false">
     Location
   </button>
   <ul class="dropdown-menu">
@@ -22,7 +22,7 @@
 </div>-->
 <!--Dropdown-3 genre-->
 <div class="dropdown">
-  <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+  <button class="btn btn-secondary dropdown-toggle custom-dropdown-button" type="button" data-bs-toggle="dropdown" aria-expanded="false">
     Genre
   </button>
   <ul class="dropdown-menu">
