--- a/app/views/gigs/_card.html.erb
+++ b/app/views/gigs/_card.html.erb
@@ -1,7 +1,6 @@
 
-<div class="card-product">
-  
-  <div class="card-product-infos">
+<div class="card-gig">
+  <div class="card-gig-infos">
 
     <p>
     <strong>Artist:</strong>
