fixed styling of big-card when searching

--- a/app/views/gigs/_card.html.erb
+++ b/app/views/gigs/_card.html.erb
@@ -1,10 +1,10 @@
-
+<!-- 
 <div class="card-gig">
   <div class="card-gig-infos">
 
     <p>
     <strong>Artist:</strong>
-    <%= gig.name %>
+    <%= gig.band %>
     </p>
 
     <p>
@@ -29,3 +29,31 @@
 </div>
 
 
+-->
+<div class="event-card">
+  <div class="event-image">
+    <img src="<%= gig.band_image_url %>" alt="Concert Image">
+    <div class="event-date-time">
+      <%= gig.time.strftime("%a, %b %e %Y") %>
+      <br>
+      <%= gig.time.strftime("%I:%M %P") %>
+    </div>
+  </div>
+  <div class="event-details">
+    <div class="event-info">
+      <h2 class="event-title"><%= gig.event_name %></h2>
+      <p class="event-venue"><span class="venue-icon">📍</span><%= gig.location %></p>
+      <p class="event-description">
+        <%= gig.description %>
+      </p>
+    </div>
+    <div class="event-band-ticket">
+      <div class="event-bands">
+        <%= gig.band %>
+      </div>
+      <div class="event-ticket-icon">
+        <img src="<%= asset_path('ticket-icon.png') %>" alt="Ticket Icon" style="width: 40px; height: 40px; border-radius: 50%; filter: invert(100%) sepia(0%) saturate(0%) hue-rotate(0deg) brightness(100%) contrast(100%);">
+      </div>
+    </div>
+  </div>
+</div>
