--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -13,148 +13,241 @@
   font-weight: bold;
   text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.2);
   border-radius: 5px;
-  box-shadow: 0 0 15px rgba(0,0,0,0.2);
+  box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
 }
 
-  .card-gig {
-    overflow: hidden;
-    min-height: 320px;
-    max-width: 700px;
-    margin-top: 30px;
-    margin-bottom: 30px;
-    background: white;
-    box-shadow: 0 0 15px rgba(0,0,0,0.2);
-    display: flex;
-    align-items: center;
-    margin: 20px;
-      padding: 20px; /* Add padding around the card contents */
+.card-gig {
+  overflow: hidden;
+  min-height: 320px;
+  max-width: 700px;
+  margin-top: 30px;
+  margin-bottom: 30px;
+  background: white;
+  box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
+  display: flex;
+  align-items: center;
+  margin: 20px;
+  padding: 20px; /* Add padding around the card contents */
+}
 
-  }
+.card-gig img {
+  box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
+  display: absolute;
+  align-items: center;
+}
 
-  .card-gig img {
-    box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
-    display: absolute;
-    align-items: center;
-  }
+.card-gig h2 {
+  font-size: 16px;
+  font-weight: bold;
+  margin: 0;
+}
 
-  .card-gig h2 {
-    font-size: 16px;
-    font-weight: bold;
-    margin: 0;
-  }
+.card-gig p {
+  font-size: 12px;
+  line-height: 1.4;
+  opacity: 0.7;
+  margin-bottom: 8px;
+  margin-top: 8px;
+}
 
-  .card-gig p {
-    font-size: 12px;
-    line-height: 1.4;
-    opacity: 0.7;
-    margin-bottom: 8px;
-    margin-top: 8px;
-  }
+.card-gig .card-gig-infos {
+  padding: 16px;
+}
 
-  .card-gig .card-gig-infos {
-    padding: 16px;
-  }
+.card-registration-button,
+.card-details-button {
+  display: inline-block;
+  padding: 10px 20px;
+  margin: 5px;
+  background-color: purple;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  text-align: center;
+  text-decoration: none;
+  cursor: pointer;
+  font-size: 16px;
+}
 
-  .card-registration-button,
-  .card-details-button {
-    display: inline-block;
-    padding: 10px 20px;
-    margin: 5px;
-    background-color: purple;
-    color: white;
-    border: none;
-    border-radius: 5px;
-    text-align: center;
-    text-decoration: none;
-    cursor: pointer;
-    font-size: 16px;
-  }
+.card-registration-button:hover,
+.card-details-button:hover {
+  background-color: black;
+}
 
-  .card-registration-button:hover,
-  .card-details-button:hover {
-    background-color: black;
-  }
+.upcoming-events-card {
+  overflow: hidden;
+  height: 170px;
+  background: white;
+  box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
+  display: flex;
+  align-items: center;
+  border-radius: 16px;
+  width: 400px;
+  margin-bottom: 13px;
+}
 
-  .upcoming-events-card {
-    overflow: hidden;
-    height: 170px;
-    background: white;
-    box-shadow: 0 0 15px rgba(0,0,0,0.2);
-    display: flex;
-    align-items: center;
-    border-radius: 16px;
-    width: 400px;
-    margin-bottom: 13px;
-  }
+.upcoming-events-card img {
+  height: 100%;
+  // width: 35%;
+  object-fit: cover;
+}
 
-  .upcoming-events-card img {
-    height: 100%;
-    // width: 35%;
-    object-fit: cover;
-  }
+.upcoming-events-card h2 {
+  font-size: 16px;
+  font-weight: bold;
+  margin: 0;
+}
 
-  .upcoming-events-card h2 {
-    font-size: 16px;
-    font-weight: bold;
-    margin: 0;
-  }
+.upcoming-events-card h3 {
+  font-size: 14px;
+  margin: 0;
+}
 
-  .upcoming-events-card h3 {
-    font-size: 14px;
-    margin: 0;
-  }
+.upcoming-events-card h4 {
+  font-size: 18px;
+  font-weight: bold;
+  margin: 0;
+}
 
-  .upcoming-events-card h4 {
-    font-size: 18px;
-    font-weight: bold;
-    margin: 0;
-  }
+.upcoming-events-card p {
+  font-size: 12px;
+  line-height: 1.4;
+  opacity: 0.7;
+  margin-bottom: 0;
+  margin-top: 8px;
+}
 
-  .upcoming-events-card p {
-    font-size: 12px;
-    line-height: 1.4;
-    opacity: .7;
-    margin-bottom: 0;
-    margin-top: 8px;
-  }
+.upcoming-events-card .upcoming-events-card-infos {
+  padding: 10px;
+}
 
-  .upcoming-events-card .upcoming-events-card-infos {
-    padding: 10px;
-  }
-
-  .upcoming-events-card-infos {
+.upcoming-events-card-infos {
   flex: 1;
   padding: 0 10px;
 }
 
-  .upcoming-events-card .col-3 {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-end;
-    justify-content: space-around; /* Ensure buttons are at top and bottom */
-    height:100%; /* Ensure the column takes full height */
-    width: 10%;
-    margin-right: 10px;
-  }
-  
-  .upcoming-events-card .btn {
-    width: 100%;
-    margin-bottom: 10px;
-    margin-top: 10px;
-    margin-right: 20px; 
-    padding-left: 5px;
-    padding-right: 5px;
-    border-radius: 100px;
-  }
+.upcoming-events-card .col-3 {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+  justify-content: space-around; /* Ensure buttons are at top and bottom */
+  height: 100%; /* Ensure the column takes full height */
+  width: 10%;
+  margin-right: 10px;
+}
 
-  .upcoming-events-card .btn:first-child {
-    
-    margin-top: 10px;
-    padding-top: 10px; /* Match the padding-top of the column to the left */
+.upcoming-events-card .btn {
+  width: 100%;
+  margin-bottom: 10px;
+  margin-top: 10px;
+  margin-right: 20px;
+  padding-left: 5px;
+  padding-right: 5px;
+  border-radius: 100px;
+}
 
-  }
-  
-  .upcoming-events-card .btn:last-child {
-    margin-bottom: 10px; /* Push the last button to the bottom */
-    padding-bottom: 10px;
-  }
+.upcoming-events-card .btn:first-child {
+  margin-top: 10px;
+  padding-top: 10px; /* Match the padding-top of the column to the left */
+}
+
+.upcoming-events-card .btn:last-child {
+  margin-bottom: 10px; /* Push the last button to the bottom */
+  padding-bottom: 10px;
+}
+
+.event-card {
+  width: 90%; /* Adjusted width for mobile screens */
+  max-width: 400px; /* Limits the max width */
+background-color: white;
+  border-radius: 15px;
+  overflow: hidden;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  margin: 20px auto;
+  // font-family: "Helvetica", sans-serif;
+}
+
+.event-image {
+  position: relative;
+}
+
+.event-image img {
+  width: 100%;
+  display: block;
+}
+
+.event-date-time {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  background-color: #7b4dbc;
+  color: white;
+  padding: 5px 10px;
+  border-radius: 20px;
+  font-size: 14px;
+  font-weight: bold;
+  text-align: right;
+}
+
+.event-details {
+  display: flex;
+  justify-content: space-between;
+  padding: 15px;
+}
+
+.event-info {
+  max-width: 70%;
+}
+
+.event-title {
+  font-size: 20px;
+  margin: 0;
+  font-weight: bold;
+}
+
+.event-venue {
+  font-size: 16px;
+  color: #666;
+  margin: 5px 0;
+}
+
+.venue-icon {
+  font-size: 18px;
+}
+
+.event-description {
+  font-size: 14px;
+  color: #777;
+  margin-top: 10px;
+}
+.event-band-ticket {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+  justify-content: space-between;
+  height: 100px;
+}
+
+.event-bands {
+  text-align: right;
+  font-size: 16px;
+  font-weight: bold;
+  color: #333;
+}
+
+.event-ticket-icon {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #43d8c9;
+  border-radius: 50%;
+  padding: 10px;
+  width: 50px;
+  height: 50px;
+}
+
+.ticket-icon {
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+}
