--- a/app/views/gigs/_filter.html.erb
+++ b/app/views/gigs/_filter.html.erb
@@ -3,7 +3,7 @@
   <button class="btn btn-secondary dropdown-toggle custom-dropdown-button" type="button" data-bs-toggle="dropdown" aria-expanded="false">
     Location
   </button>
-  <ul class="dropdown-menu">
+  <ul class="dropdown-menu scrollable-dropdown">
     <% @locations.each do |location| %>
       <li><a class="dropdown-item" href="?location=<%= location %>"><%= location %></a></li>
     <% end %>
@@ -25,7 +25,7 @@
   <button class="btn btn-secondary dropdown-toggle custom-dropdown-button" type="button" data-bs-toggle="dropdown" aria-expanded="false">
     Genre
   </button>
-  <ul class="dropdown-menu">
+  <ul class="dropdown-menu scrollable-dropdown">
     <% @genres.each do |genre| %>
       <li><a class="dropdown-item" href=<%="?genre=#{genre.name}"%>><%= genre %></a></li>
       <%end %>
