changed the card-product to card-gig to reflect the purpose of card

--- a/app/views/registrations/_card.html.erb
+++ b/app/views/registrations/_card.html.erb
@@ -1,7 +1,7 @@
 
-<div class="card-product">
+<div class="card-gig">
   
-  <div class="card-product-infos">
+  <div class="card-gig-infos">
 
     <p>
     <strong>Artist:</strong>
