--- a/app/views/users/dashboard.html.erb
+++ b/app/views/users/dashboard.html.erb
@@ -1,4 +1,5 @@
-<h3> Your Coming Events </h3>
+<div class="container p-3">
+<h3> Your Upcoming Events </h3>
 
 <div class="d-flex flex-column justify-content-center align-items-center">
 <% @current_user.registrations.each do |registration| %>
@@ -24,6 +25,8 @@
   </div>
 <% end %>
 
+<h3> My Favorite Artists </h3>
+
 <%# <h3> My Favorite Artists </h3>
 <% @current_user.artist_list.each do |genre| %>
 <%#
@@ -32,3 +35,4 @@
   <%# </div>
 
 <%# <% end %>
+</div>
