--- a/app/views/gigs/_map.html.erb
+++ b/app/views/gigs/_map.html.erb
@@ -1,9 +1,18 @@
 <%# MAPBOX %>
-<div data-controller="map" class="map-container" data-map-markers-value="<%= @markers.to_json %>" data-map-api-key-value="<%= ENV['MAPBOX_API_KEY'] %>">
-    <div class="mapbox" style="width: 100%; height: 100%;"
-    data-map-target="mapElement"
-    >
-    </div>
+<div data-controller="map" class="map-container"
+     <% if @markers.present? && @markers.any? %>
+       data-map-markers-value="<%= @markers.to_json %>"
+     <% else %>
+       data-map-markers-value="[]"
+     <% end %>
+     data-map-api-key-value="<%= ENV['MAPBOX_API_KEY'] %>">
+  <div class="mapbox" style="width: 100%; height: 100%;"
+       data-map-target="mapElement">
+  </div>
+  <% if @markers.present? && @markers.any? %>
     <div class="content-wrapper" data-map-target="gig">
     </div>
+  <% else %>
+    <p>No results found.</p>
+  <% end %>
 </div>
