--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -11,10 +11,11 @@
         <i class="fa-solid fa-calendar"></i>
         <span class="nav-text">events</span>
     </a>
-    <a href="#" class="nav-item">
+  <%= link_to user_chatrooms_path, class: "nav-item" do %>
         <i class="fa-solid fa-comments"></i>
         <span class="nav-text">chats</span>
     </a>
+  <% end %>
   <%= link_to dashboard_path, class: "nav-item" do %>
     <i class="fa-solid fa-circle-user"></i>
     <span class="nav-text">dashboard</span>
