--- a/app/assets/stylesheets/components/_chatroom.scss
+++ b/app/assets/stylesheets/components/_chatroom.scss
@@ -8,7 +8,7 @@
   flex-grow: 1;
 
   h1 {
-    border-bottom: 1px solid $gray-200;
+    // border-bottom: 1px solid $gray-200;
     margin-bottom: 0;
     padding: 1rem;
   }
