--- a/app/views/chatrooms/index.html.erb
+++ b/app/views/chatrooms/index.html.erb
@@ -1,9 +1,6 @@
 <div class="container p-3">
-<h1>Chatrooms</h1>
-
-<% @chatrooms.each do |chatroom| %>
-  <div>
-    <h2><%= link_to chatroom.name, chatroom_path(chatroom) %></h2>
+  <h1><i class="fa-solid fa-comment"></i> Gig Chats</h1>
+  <div class="chat-event-card-container">
+    <%= render partial: 'chats', collection: @chatrooms, as: :chat %>
   </div>
-<% end %>
 </div>
