added profile pic to chatroom

--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -3,6 +3,9 @@
 }
 
 .navbar-tokyoscene {
+  position: sticky;
+  top: 0;
+  z-index: 1000;
   justify-content: space-between;
   background: #100303;
 }
