--- a/app/assets/stylesheets/components/_chats.scss
+++ b/app/assets/stylesheets/components/_chats.scss
@@ -63,6 +63,11 @@
   padding: 15px;
 }
 
+.scrollable-container {
+  max-height: calc(4 * 200px); /* Adjust 200px to the approximate height of one card */
+  overflow-y: auto;
+}
+
 .icon-button {
   width: 45px;
   height: 45px;
