--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -19,7 +19,10 @@
     justify-content: space-around;
     align-items: center;
     box-shadow: 0 -2px 5px rgba(0, 0, 0, 0.1);
-    position: fixed;
+
+    // keep footer at the bottom
+    position: sticky;
+    // position: fixed;
     bottom: 0;
     z-index: 5; /* Lower than gigs-partial */
 }
