--- a/app/views/chatrooms/index.html.erb
+++ b/app/views/chatrooms/index.html.erb
@@ -1,6 +1,7 @@
 <div class="container p-3">
   <h1><i class="fa-solid fa-comment"></i> Gig Chats</h1>
-  <div class="chat-event-card-container">
-    <%= render partial: 'chats', collection: @chatrooms, as: :chat %>
-  </div>
+    <div class="chat-event-card-container scrollable-container">
+
+  <%= render partial: 'chats', collection: @chatrooms, as: :chat %>
+</div>
 </div>
