added debug feature to message sending

--- a/app/views/chatrooms/show.html.erb
+++ b/app/views/chatrooms/show.html.erb
@@ -13,5 +13,5 @@
     <%= f.submit "Send", class: "btn btn-primary mb-3" %>
   <% end %>
   <!-- app/views/chatrooms/show.html.erb -->
-  <%= debug @message.errors.full_ßmessages if @message.errors.any? %>
+  <%= debug @message.errors.full_messages if @message.errors.any? %>
 </div>
