footer styled to bottom as footer is hidden

--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -21,8 +21,8 @@
     box-shadow: 0 -2px 5px rgba(0, 0, 0, 0.1);
 
     // keep footer at the bottom
-    position: sticky;
-    // position: fixed;
+    // position: sticky;
+    position: fixed;
     bottom: 0;
     z-index: 5; /* Lower than gigs-partial */
 }
