--- a/app/views/users/dashboard.html.erb
+++ b/app/views/users/dashboard.html.erb
@@ -7,34 +7,43 @@
 <div class="upcoming-events-card">
   <img src="https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/skateboard.jpg" />
   <div class="upcoming-events-card-infos">
-    <h2> <%= registration.gig.name %></h2>
+    <h2> <%= registration.gig.event_name %></h2>
     <p><%= registration.gig.time %></p>
     <p><%= registration.gig.location %></p>
     <p><%= registration.status %></p>
+    <%= button_to "Unregister", gig_registration_path(registration.gig_id, registration.id), :method => :delete %>
   </div>
 </div>
 <% end %>
 </div>
 
-
-
-
 <h3> My Favorite Genres </h3>
+<div class="dropdown">
+  <button class="btn btn-secondary dropdown-toggle custom-dropdown-button" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+    Add Genre
+  </button>
+  <ul class="dropdown-menu scrollable-dropdown">
+    <% @genres.each do |genre| %>
+      <li><%= button_to genre, add_genre_user_path(@user, user: {genre: genre.name}), method: :patch %></li>
+      <%end %>
+    </ul>
+  </div>
+
+<div class="d-flex flex-row justify-content-space-around align-items-center">
 <% @user.genre_list.each do |genre| %>
   <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/breakfast.jpg)">
     <%= genre %>
-    <%= button_to 'Remove', remove_genre_user_path(@user, user: @user, genre: genre), method: :patch, class: 'btn btn-danger' %>
+    <%= button_to 'Remove', remove_genre_user_path(@user, user: {genre: genre}), method: :patch, class: 'btn btn-danger' %>
   </div>
 <% end %>
-
-<h3> My Favorite Artists </h3>
+</div>
 
 <%# <h3> My Favorite Artists </h3>
 <% @current_user.artist_list.each do |genre| %>
 <%#
   <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/breakfast.jpg)">
     <%= artist %>
-  </div>
+  <%# </div>
 <% end %>
 
 </div>
