--- a/app/views/users/dashboard.html.erb
+++ b/app/views/users/dashboard.html.erb
@@ -27,24 +27,24 @@
     <% end %>
   </div>
   <h3> My Favorite Genres </h3>
+  <div class="dropdown">
+  <button class="btn btn-secondary dropdown-toggle custom-dropdown-button" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+    Add Genre
+  </button>
+  <ul class="dropdown-menu scrollable-dropdown">
+    <% @genres.each do |genre| %>
+      <li><%= button_to genre, add_genre_user_path(@user, user: {genre: genre.name}), method: :patch %></li>
+      <%end %>
+    </ul>
+  </div>
   <% @user.genre_list.each do |genre| %>
     <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/breakfast.jpg)">
       <%= genre %>
-      <%= button_to 'Remove', remove_genre_user_path(@user, user: @user, genre: genre), method: :patch, class: 'btn btn-danger' %>
+      <%= button_to 'Remove', remove_genre_user_path(@user, user: {genre: genre}), method: :patch, class: 'btn btn-danger' %>
     </div>
   <% end %>
-  <h1>Edit Your Genres</h1>
-  <%= simple_form_for @user, url: user_path(@user), method: :patch do |f| %>
-    <div class="form-group">
-      <%= f.input :genres, as: :text, label: 'Favorite Genres', input_html: { value: @user.genre_list.join(', ') } %>
-    </div>
-    <%= f.submit 'Update Genres', class: 'btn btn-primary' %>
-  <% end %>
-  <h1>Add New Genre</h1>
-  <%= simple_form_for :genre, url: add_genre_user_path(@user), method: :patch do |f| %>
-    <%= f.input :name, as: :string, label: 'New Genre' %>
-    <%= f.submit 'Add Genre', class: 'btn btn-success' %>
-  <% end %>
+
+
   <h3> My Favorite Artists </h3>
   <% @user.artist_list.each do |artist| %>
     <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/breakfast.jpg)">
